update jar to deploy